--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/RPG_Pt1_WebBuild.loader.js";
+      var loaderUrl = buildUrl + "/WebBuild.loader.js";
       var config = {
-        dataUrl: buildUrl + "/RPG_Pt1_WebBuild.data",
-        frameworkUrl: buildUrl + "/RPG_Pt1_WebBuild.framework.js",
-        codeUrl: buildUrl + "/RPG_Pt1_WebBuild.wasm",
+        dataUrl: buildUrl + "/WebBuild.data",
+        frameworkUrl: buildUrl + "/WebBuild.framework.js",
+        codeUrl: buildUrl + "/WebBuild.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "SS_RPG_Dev",
